<resources>
    <string name="app_name">SavLife Admin</string>
    <string name="save_lives_ndonate_blood">Save lives.\nDonate blood.</string>
    <string name="mobile_number">Mobile number</string>
    <string name="login">Login</string>
    <string name="fullname">Fullname</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="register">Register</string>
    <string name="no_internet_available">No Internet available</string>
    <string name="please_Watit">Please wait..</string>
    <string name="oops">OOPS!!</string>
    <string name="dont_worry_engineers_r_working">Woops!! Something went wrong But don\'t worry our engineers are working on it.</string>
    <string name="report_issue">Report issue</string>
    <string name="try_again">Try again</string>
    <string name="did_t_got_otp">Did\'t got OTP?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="otp_verification">OTP verification</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify">Verify</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="otp_has_been_send_to">OTP Has Been Send To</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="need_help_contact_us">Need Help? Contact Us.</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="search">Search</string>
    <string name="retry">retry</string>
    <string name="ok">ok</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="enter_donor_id">Enter Donor Id</string>
    <string name="search_donor">Search Donor</string>
    <string name="add_donor">Add Donor</string>
    <string name="donor_name">Donor Name</string>
    <string name="donor_mobile">Donor Mobile</string>
    <string name="donor_city_name">Donor city name</string>
    <string name="hurray">Hurray!</string>
    <string name="select_image">Select Image</string>
    <string name="enter_lab_name">Enter lab name</string>
    <string name="enter_description">Enter description</string>
    <string name="original_price">Original price</string>
    <string name="special_price">Special price</string>
    <string name="add_deal">Add Deal</string>
    <string name="enter_deal_code">Enter deal code</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="add_admin">Add Admin</string>
    <string name="booked_deal_list">Booked Deal list</string>
    <string name="pay_bill">Pay bill</string>
    <string name="send_notification">Send notification</string>
    <string name="logout">Logout</string>
    <string name="notification_title">Notification Title</string>
    <string name="notification_message">Notification Message</string>
    <string-array name="blood_group_name">
        <item>O-</item>
        <item>O+</item>
        <item>A-</item>
        <item>A+</item>
        <item>B-</item>
        <item>B+</item>
        <item>AB-</item>
        <item>AB+</item>
        <item>HH</item>
    </string-array>
    <string-array name="location_array">
        <item>Bhopal</item>
        <item>Indore</item>
        <item>Hydrabaad</item>
        <item>Mumbai</item>


    </string-array>
</resources>
