<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.hackerkernel.admin.savlife.activity.SendNotificationActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/notification_title"
        android:id="@+id/notification_title"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="top"
        android:id="@+id/notification_message"
        android:hint="@string/notification_message"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_notification"
        android:id="@+id/notification_btn"/>

</LinearLayout>
